# LinuxGit

./: .gitignore  README.md
Documentation/: 01-MARKET-RESEARCH.md  02-TECHNOLOGY-STACK.md  03-FEATURE-SPECIFICATION.md  04-ARCHITECTURE-DESIGN.md  05-DEVELOPMENT-PLAN.md  06-UI-UX-GUIDELINES.md  07-GIT-AUTHENTICATION-GUIDE.md  08-BRANCH-VISUALIZATION-MOCKUPS.md  09-GAPS-ANALYSIS-AND-IMPROVEMENTS.md  FUTURE-IMPLEMENTATIONS.md  GITHUB-FEATURES-ANALYSIS.md  README.md
app/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: error.rs  lib.rs  main.rs
app/src-tauri/src/ai/: mod.rs  ollama.rs  openai.rs
app/src-tauri/src/commands/: mod.rs  state.rs
app/src-tauri/src/commands/ai/: commands.rs
app/src-tauri/src/commands/git/: branch.rs  commit.rs  config.rs  diff.rs  mod.rs  remote.rs  repository.rs  status.rs  workflow.rs
app/src-tauri/src/commands/github/: actions.rs  auth.rs  deployments.rs  environments.rs  insights.rs  issues.rs  mod.rs  notifications.rs  pages.rs  pull_requests.rs  releases.rs  security.rs
app/src-tauri/src/git/: branch.rs  clone.rs  commit.rs  diff.rs  mod.rs  remote.rs  repository.rs  status.rs
app/src-tauri/src/github/: actions.rs  api.rs  deployments.rs  environments.rs  insights.rs  issues.rs  mod.rs  notifications.rs  oauth.rs  pages.rs  pull_requests.rs  releases.rs
app/src/hooks/: index.ts  useGit.ts  useGitHub.ts  useNotifications.ts
(+97 files in other folders)
