[package]
name = "linuxgit"
version = "0.1.0"
description = "A modern, AI-enabled Git desktop application for Linux"
authors = ["LinuxGit Team"]
license = "MIT"
repository = "https://github.com/linuxgit/linuxgit"
edition = "2021"
rust-version = "1.70"

[lib]
name = "linuxgit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
keyring = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
open = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
urlencoding = "2"
walkdir = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
